# OctopusEnergyAPIWrapper

./: .gitignore  pyproject.toml
src/octopus/: client.py  config.py
