[tool.poetry]
name = "octopus"
version = "0.1.0"
description = ""
authors = ["Jon Charter"]
license = "MIT"
readme = "README.md"
packages = [{include = "octopus", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
